# curl_C-_Client

./: CMakeLists.txt  README.md  main.cpp
include/curl/: curl.h
jsoncpp/lib_json/: json_value.cpp
lib/: libcurl_a.lib
